--- a/src/pages/personal/styles/personal.css
+++ b/src/pages/personal/styles/personal.css
@@ -2,10 +2,17 @@
     background-color: #262834;
     padding: .15rem .2rem;
 }
+.flex2{
+    /*display: flex;*/
+    /*justify-content: space-around;*/
+}
 .mod-userinfo .balance-wrap {
     text-align: center;
     color: #FFF;
     padding: 0 0 .1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .mod-userinfo .pay-wrap {
