--- a/src/pages/home/styles/home.css
+++ b/src/pages/home/styles/home.css
@@ -109,5 +109,13 @@
     border-radius: 100%;
     background-color: #cd3d3f;
 }
-
+.list-item:nth-of-type(1):before{
+    content:'\e608';
+}
+.list-item:nth-of-type(2):before{
+    content:'\e61f';
+}
+.list-item:nth-of-type(2):before{
+    content:'\e611';
+}
 
